--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Telegram Bot Token
-BOT_TOKEN=7680082560:AAHieHc-JmgByZ4TMNVxs47glshHy5GT2IQ
+BOT_TOKEN=
 
 # Tanta University API URLs
 LOGIN_URL=https://tdb.tanta.edu.eg/ebooks/Stud_login.aspx
